--- a/src/components/MessageCard.module.css
+++ b/src/components/MessageCard.module.css
@@ -5,6 +5,7 @@
 
 .container-inner {
   width: var(--messages-max-w);
+  max-width: var(--message-max-w);
   margin: 0 auto;
   padding: 1rem;
   display: flex;
@@ -33,6 +34,7 @@
 }
 
 .message-text {
+  min-width: 0;
   flex-grow: 1;
   line-height: 1.6;
 }
@@ -48,6 +50,13 @@
 .codeblock {
   padding: 1rem;
   border-radius: 6px;
+}
+.inline-codeblock {
+  padding: 0.2rem;
+  border-radius: 2px;
+}
+.codeblock-inner {
+  white-space: pre-line;
 }
 
 .buttons-container {
